src/styles/main.scss
/* ... */
.add-form {
  width: 100%;
}
.section {
  margin: 2rem 0;
  position: relative;
}
.section__title {
  margin-bottom: 1.5rem;
}
.add-form__user-error {
  top: 9.5rem;
  right: 4.8rem;
  position: fixed;
  z-index: 1;
}
.add-form__name-error {
  top: 9.5rem;
  left: 0;
  width: 100%;
}
.add-form__error {
  right: 1rem;
  top: -1.9rem;
}
.edit-form__error {
  right: 10rem;
  top: -1.9rem;
}
.add-form-image {
  flex: 0 1 15%;
}
.add-form-col {
  flex: 0 0 30%;
  margin: 0 2rem;
}
.add-form-input-title {
  margin-bottom: 1rem;
}
.add-form-numberlabel {
  font-size: 2rem;
  color: #fff;
  background-color: #107c91;
  border-radius: 0.4rem;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  display: inline-block;
  height: 5rem;
  padding: 0.8rem 1rem;
  vertical-align: top;
}
.input--invalid + .add-form-numberlabel {
  background-color: #a94442;
}
input[type="text"].add-form-textfield {
  font-size: 2rem;
  height: 5rem;
}
input[type="number"].add-form-numberfield {
  font-size: 2rem;
  height: 5rem;
  width: 8rem;
  margin-bottom: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right-width: 0;
}
.input-list__label,
.input-list__button {
  font-weight: 300;
  flex: 0 0 auto;
}
.input-list__label,
.input-list__controls {
  font-size: 2.5rem;
  width: 3.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.input-list__label {
  margin-bottom: 1.5rem;
}
.input-list__controls {
  position: relative;
  top: -1rem;
}
.input-list__remove {
  margin-left: 1rem;
  margin-bottom: 1.5rem;
}
.input-list__control {
  height: 3rem;
  width: 2rem;
  position: relative;
}
.add-form__radio-group {
  text-align: center;
  flex: 0 1 auto;
  margin: 1rem 2rem 0;
  cursor: pointer;
  opacity: 0.3;
  width: 14rem;
  position: relative;
  transition: opacity 0.2s, color 0.2s;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
.add-form__radio-group:hover,
.add-form__radio-group:focus,
input[type="radio"]:focus + .add-form__radio-group {
  opacity: 1;
}
.add-form__radio-group span {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10rem;
  width: 10rem;
  margin: 0 auto 1rem;
  border-radius: 50%;
  border: 2px solid #107c91;
  transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
}
.add-form__radio-group .icon-background-container {
  border: none;
}
.add-form__radio-group i {
  font-size: 3.5rem;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  color: #107c91;
  transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
}
input[type="radio"]:checked + .add-form__radio-group {
  opacity: 1;
  color: #107c91;
  -webkit-animation: select-radio 0.3s;
  animation: select-radio 0.3s;
}
input[type="radio"]:checked + .add-form__radio-group span {
  background-color: #107c91;
}
input[type="radio"]:checked + .add-form__radio-group .icon-background-container {
  background-color: transparent;
}
input[type="radio"]:checked + .add-form__radio-group i {
  color: #fff;
}
input[type="radio"]:checked + .add-form__radio-group .icon-background-container i {
  color: #107c91;
}
.card {
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
    0 1px 5px 0 rgba(0, 0, 0, 0.12);
  max-width: 100%;
  background: #fff;
  border-radius: 2px;
  position: relative;
  display: flex;
  margin: 1rem 0;
}
.wide-card {
  border: 1px solid rgba(0, 0, 0, 0.2);
  flex-direction: column;
  flex: 1 1 100%;
}
.small-card {
  flex: 1 1 50%;
}
.card__image {
  flex: 1 0 auto;
  min-height: 200px;
  background-repeat: no-repeat;
  background-position: center top;
  background-size: cover;
}
.wide-card .card__image {
  height: 160px;
  display: flex;
  padding: 1.6rem;
}
.card__image-text {
  align-self: flex-end;
  color: #fff;
  font-style: italic;
  margin: 0;
}
.card__content {
  width: 60%;
  padding: 1.6rem;
  display: flex;
  flex-wrap: wrap;
}
.card__title,
.card__text,
.card__infos {
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.card__title {
  flex: 1 0 auto;
}
.card__title,
.card__infos {
  margin-bottom: 1.6rem;
}
.card__text {
  border-top: 1px solid rgba(0, 0, 0, 0.2);
  width: 100%;
  padding-top: 1rem;
}
.wide-card .card__text {
  padding: 1.6rem;
}
.card__infos {
  width: 60px;
  font-size: 2rem;
}
.card__infos img {
  width: 2rem;
  position: relative;
  top: 0.2rem;
}
.footer {
  margin-top: 6rem;
}
.footer__text span {
  font-size: 1rem;
  font-style: italic;
}
.invisible {
  display: none;
}

@media (min-width: 40rem) {
  .main-search,
  .main-add,
  .add-form {
    width: 780px;
  }
  .card {
    margin: 1.6rem;
  }
  .wide-card {
    margin: 3.2rem 1.6rem;
  }
}

